@@ -16,3 +16,4 @@ linkcolor = #ce5c00
 headercolor1 = #204a87
 headercolor2 = #3465a4
 headerlinkcolor = #fcaf3e
+textalign = justify
